// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchImportsMessage should follow dynamic renames in imports 1`] = `
Object {
  "importsByAsset": Array [
    Object {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset uuid=(testFinal)>
    
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImportsMessage should import multilevel and avoid colliding stub names 1`] = `
Object {
  "importsByAsset": Array [
    Object {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset uuid=(testFinal)>
    
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImportsMessage should properly stub out features in room description 1`] = `
Object {
  "importsByAsset": Array [
    Object {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset uuid=(testFinal)>
    <Feature
        uuid=(testFeature)
        key=(featureImport)
        origin=(ASSET#testImportAssetFour,ASSET#testFinal)
    />
    <Room
        uuid=(testRoomWithFeatures)
        key=(testRoomWithFeatures)
        origin=(ASSET#testImportAssetFour,ASSET#testFinal)
    >
        <Situation
            uuid=(DEFAULT)
            origin=(ASSET#testImportAssetFour,ASSET#testFinal)
            ref={0}
        />
        <Situation uuid=(DEFAULT) ref={2}>
            <Description>
                <Link to=(testFeature)>
                    Test
                </Link><Link to=(featureImport)>
                    Test
                </Link>
            </Description>
        </Situation>
    </Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImportsMessage should recursive fetch one level of element and stubs when passed import key 1`] = `
Object {
  "importsByAsset": Array [
    Object {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset uuid=(testFinal)>
    
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImportsMessage should return element and stubs when passed non-import key 1`] = `
Object {
  "importsByAsset": Array [
    Object {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset uuid=(testFinal)>
    <Room uuid=(testNonImport) key=(testNonImport) origin=(ASSET#testFinal)>
        <Situation uuid=(DEFAULT) origin=(ASSET#testFinal) ref={0} />
        <Situation uuid=(DEFAULT)>
            <Description>DescriptionOne</Description>
        </Situation>
    </Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImportsMessage should return empty when passed no keys 1`] = `
Object {
  "importsByAsset": Array [
    Object {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset uuid=(testFinal) />",
    },
  ],
  "messageType": "FetchImports",
}
`;
